# BMI-SOFT-EMG-Decoding

./: .gitignore  README.md  config.yml  pyproject.toml
archives/2024/final_demo/: README.md
archives/2025/libML/: data_load_and_label_for_training.py  data_loading_xdf.py  trigger_to_label.py
archives/2025/notebooks/: data_loading_exploration.ipynb
configs/: train.yml
docs/: Data Architecture.drawio  adapt_to_board.md
libML/: data_load_and_label_for_training.py  data_loading.py  data_loading_xdf.py  evaluation.py  export.py  feature_engineering.py  models.py  plots_figures.py  preprocessing.py  preprocessing_new.py  snr.py  trigger_to_label.py  utils.py
notebooks/: 1.0-gcf-testing_marimo.py  1.0_gcf_exploring_kraken.py  2.0_gcf_exploring_bids.py  2.5_gcf_exploring_bids_raw.py  3.0_gcf_epochs.py  4.0_gcf_building_model.py  4.5_gcf_building_model_v2.py  EEG_decoding.ipynb  inference_test.ipynb  models_testing.ipynb  split.ipynb  test.ipynb  test_edf.ipynb
notebooks/results/scaler/: feature_info_standard.pkl  scaler_standard.pkl
scripts/: build_dataset.py  convert_signal.py  cut_signal.py  download_bids.py  inspect_bids.py  load_bids.py  test.py  train_all_models.py  train_single_model.py
scripts/dataset/: naive_archive.py
scripts/models/: triple_tree.py
src/bmiemg/data/: DataDownloader.py  DataLoader.py  README.md
src/bmiemg/models/: ClassifierEstimator.py  Evaluator.py  ModelRegistry.py  Trainer.py  TrainingConfig.py  TrainingResults.py  __init__.py
src/bmiemg/plots/: __init__.py  add_events.py  channel_plots.py  plot_emg.py
(+82 files in other folders)
