[project]
name = "bmiemg"
version = "0.1.0"
description = "Package to help manage all dependencies"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "hydra-core (>=1.3.2,<2.0.0)",
    "polars (>=1.39.3,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "marimo (>=0.22.0,<0.23.0)",
    "hydra-colorlog (>=1.2.0,<2.0.0)",
    "hydra-optuna-sweeper (>=1.2.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "rich (>=14.3.3,<15.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "rootutils (>=1.0.7,<2.0.0)",
    "pyxdf (>=1.17.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "bmiemg", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
